# proiect_sop

./: .gitignore  LICENSE
architecture/: administrator_accept_request.dia  administrator_log_in.dia  administrator_login_activity_diagram.dia  administrator_logout.dia  administrator_view_configuration_file.dia  administrator_view_requests.dia  administrator_view_requests_activity_diagram.dia  services.txt  use_cases.dia  user_create_request.dia
architecture/prototype/: Administrator.lua  DHCPService.lua  RequestService.lua  TicketService.lua  User.lua  UserService.lua
client/: about_controller.lua  about_view.lua  app.lua  base64.lua  client_model.lua  dhcp_controller.lua  dhcp_view.lua  file_controller.lua  file_view.lua  main_controller.lua  main_view.lua  main_window.lua  popup_view.lua  services_controller.lua  services_view.lua  window_manager.lua
dhcp_service/: config_file_example.json
dhcp_service/lua_src/: configuration_file_controller.lua  configuration_file_model.lua  configuration_file_view.lua  http_client_test.lua  http_common.lua  http_dispacher.lua
doc/: Report1.odt
ticket_service/: CMakeLists.txt
ticket_service/c_src/: gcrypt_aux.c  gcrypt_aux.h  lua_gcrypt.c  test_gcrypt.c
ticket_service/lua_src/: granting_ticket_controller.lua  granting_ticket_model.lua  granting_ticket_view.lua  http_client_test.lua  http_common.lua  http_dispacher.lua  service_key_controller.lua  service_key_model.lua  service_key_view.lua  service_key_viewer.lua  test.lua  ticket_controller.lua  ticket_model.lua  ticket_view.lua  user_model.lua
(+9 files in other folders)
